<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="E_AutoMan" Id="{667288f6-9321-4fd4-af75-fc2a5a4ec07b}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_AutoMan :
(
	MANUAL := 0,
	AUTO := 1
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>